<resources>
    <string name="app_heading">Get Points Tichu</string>
    <string name="main_title">Εισάγετε Ομάδες</string>
    <string name="already_team">(κάντε κλικ στο κουτάκι αν θέλετε να δημιουργήσετε νέα ομάδα)</string>
    <string name="hello">Γεια σας φίλοι του TICHU!\nΤι θέλετε να κάνετε;</string>
    <string name="resume_old">Ολοκλήρωση Παιχνιδιού</string>
    <string name="new_game">Νέο Παιχνίδι</string>
    <string name="statistics">Στατιστικά</string>
    <string name="rules">Κανόνες Tichu</string>
    <string name="teams">Ονόματα Ομάδων</string>
    <string name="team1">Ομάδα 1</string>
    <string name="team2">Ομάδα 2</string>
    <string name="ready">Συνέχεια...</string>
    <string name="nextRound">Επόμενος Γύρος</string>
    <string name="players">Εισάγετε τα ονόματα των παικτών με τη σειρά που μοιράζουν</string>
    <string name="again">Αλλαγή Ομάδων!</string>
    <string name="end">Παίξτε ξανά!</string>
    <string name="delete">Διαγραφή</string>
    <string name="edit">Επεξεργασία</string>
    <string name="tichu_label">Ετοιμοι για TICHU!</string>
    <string name="app_name">TICHU SCORES</string>
    <string name="team_prompt">Επιλέξτε Ομάδα</string>
    <string name="player_prompt">Επιλέξτε Παίχτη</string>
    <string name="choosegame_prompt">Επιλέξτε Παιχνίδι</string>
    <string name="choose_old_game">Επιλέξτε το Παιχνίδι</string>
    <string name="continue_game">Συνέχεια Παιχνιδιού</string>
    <string name="date">date</string>
    <string name="cdimage">image</string>
    <string name="delete_team">Διαγραφή Ομάδας</string>
    <string name="delete_player">Διαγραφή Παίχτη</string>
    <string name="delete_database">Διαγραφή Βάσης</string>
    <string name="delete_database1">Διαγραφή Βάσης Δεδομένων</string>
    <string name="ok">OK</string>
    <string name="editsth">Αλλαγή Ονόματος Παίχτη ή Ομάδας</string>
    <string name="change_team">Τρέχον Όνομα Ομάδας</string>
    <string name="change_player">Τρέχον Ονόμα Παίχτη</string>
    <string name="new_player">Νέο Όνομα Παίχτη:</string>
    <string name="new_team">Νέο Όνομα Ομάδας:</string>
    <string name="deletesth">Διαγραφή Παίχτη, Ομάδας ή βάσης</string>
    <string name="changeName">Αλλαγή Ονόματος</string>
    <string name="menu_return">Επιστροφή στο κεντρικό μενού</string>
    <string name="choose_pl_te">Επιλέξτε Παίχτη ή Ομάδα</string>
    <string name="choose_player">Επιλογή Παίχτη</string>
    <string name="choose_team">Επιλογή Ομάδας</string>
    <string name="player_statistics">Στατιστικά Παίχτη</string>
    <string name="team_statistics">Στατιστικά Ομάδας</string>
    <string name="tichu_suc">Επιτυχημένα Tichu:</string>
    <string name="tichu_unsuc">Αποτυχημένα Tichu:</string>
    <string name="rules1">Το παιχνίδι παίζεται με 2 ομάδες των 2 παικτών και στους οποίους μοιράζεται όλη η τράπουλα εξ αρχής. Αντικειμενικός σκοπός του παιχνιδιού είναι ο κάθε παίκτης να ξεφορτωθεί πρώτος όλα τα φύλλα που έχει στο χέρι του. Και τα 14.</string>
    <string name="rules2">H ΤΡΑΠΟΥΛΑ</string>
    <string name="rules3">Φανταστείτε μια τράπουλα 52 φύλλων όπως τις κανονικές, αλλά με άλλα σύμβολα. Αντί για κούπα, καρό, μπαστούνι και σπαθί υπάρχουν τα αστέρια, διαμάντια, σπαθιά και παγόδες.
Η διαφορά αυτής της τράπουλας είναι οι 4 επιπλέον κάρτες που περιλαμβάνει οι οποίες είναι: ο Δράκος, ο Φοίνικας, το Mahjong και τα Σκυλάκια. Θα εξηγήσουμε παρακάτω τι κάνει η κάθε κάρτα.</string>
    <string name="rules4">ΠΩΣ ΠΑΙΖΕΤΑΙ ΤΟ ΠΑΙΧΝΙΔΙ</string>
    <string name="rules5">-Αρχικά μοιράζονται 8 φύλλα σε κάθε παίκτη. -Στη συνέχεια μοιράζονται και τα υπόλοιπα 6.
-Στη συνέχεια κάθε παίκτης πρέπει να δώσει από ένα φύλλο σε κάθε παίκτη. Συνήθως δίνουμε τα “χειρότερά” μας φύλλα στους αντιπάλους, και κάποιο “καλό” (αν όχι το καλύτερο, ανάλογα με την περίσταση) στο συμπαίκτη μας.
Προσοχή: Σε αυτή τη διαδικασία δε μιλάμε, δε ρίχνουμε υπονοούμενα, δε ζητάμε συγκεκριμένα φύλλα…</string>
    <string name="rules6">ΠΩΣ ΔΙΩΧΝΟΥΜΕ ΦΥΛΛΑ ΑΠΟ ΤΟ ΧΕΡΙ ΜΑΣ</string>
    <string name="rules7">Ο παίκτης που παίζει πρώτος μπορεί να διώξει φύλλα από το χέρι του με τους εξής τρόπους:</string>
    <string name="rules8">Μονοφυλλία</string>
    <string name="rules9">Ρίχνω ένα οποιοδήποτε φύλλο στο τραπέζι. Ο επόμενος από μένα μπορεί να ρίξει ένα οποιοδήποτε φύλλο, αλλά υποχρεωτικά μεγαλύτερης δύναμης από το προηγούμενο (έριξα 2; Ο επόμενος μπορεί να ρίξει οποιοδήποτε φύλλο από 3 και πάνω).</string>
    <string name="rules10">Ζευγάρι</string>
    <string name="rules11">Ρίχνω ένα οποιοδήποτε ζευγάρι ίδιων φύλλων στο τραπέζι. Ο επόμενος από μένα μπορεί να ρίξει ένα οποιοδήποτε ζευγάρι, αλλά υποχρεωτικά μεγαλύτερης δύναμης από το προηγούμενο (έριξα 5-5; Ο επόμενος μπορεί να ρίξει οποιοδήποτε ζευγάρι από 6-6 και πάνω).</string>
    <string name="rules12">Συνεχόμενα Ζευγάρια</string>
    <string name="rules13">Ρίχνω παραπάνω από ένα ζευγάρια ίδιων φύλλων στο τραπέζι. Απαραίτητη προϋπόθεση είναι τα η δύναμη των αριθμών να αυξάνει κατα 1. Π.χ. μπορώ να ρίξω 5-5/6-6/7-7. Ο επόμενος παίκτης αν θέλει να με χτυπήσει θα πρέπει να ρίξει 3 ζευγάρια με το χαμηλότερο να είναι 6-6.</string>
    <string name="rules14">Τρία ίδια φύλλα</string>
    <string name="rules15">Ρίχνω μια τριάδα ίδιων φύλλων στο τραπέζι. Ο επόμενος από μένα μπορεί να ρίξει οποιαδήποτε τριάδα ίδιων φύλλων, αλλά υποχρεωτικά μεγαλύτερης δύναμης από την προηγούμενη (έριξα J-J-J; Ο επόμενος μπορεί να ρίξει οποιαδήποτε τριάδα από Q-Q-Q και πάνω).</string>
    <string name="rules16">Φουλ</string>
    <string name="rules17">Ρίχνω 3 ίδια φύλλα + 2 ίδια φύλλα. Ο επόμενος από μένα μπορεί να ρίξει οποιδήποτε φουλ αρκεί η τριάδα να είναι η μεγαλύτερη από την προηγούμενη (έριξα 2-2-2/Κ-Κ? Ο επόμενος μπορεί να ρίξει οποιοδήποτε φουλ από 3-3-3/Χ-Χ και πάνω).</string>
    <string name="rules18">Κέντα</string>
    <string name="rules19">Ρίχνω μια σειρά φύλλων, ανεξαρτήτως χρώματος και σχήματος, η οποία πρέπει να έχει το λιγότερο 5 φύλλα. Ο επόμενος από μένα μπορεί να ρίξει οποιαδήποτε σειρά φύλλων αρκεί να είναι ισχυρότερη από την προηγούμενη, τουλάχιστον κατά 1 (έριξα 2-3-4-5-6; Ο επόμενος μπορεί να παίξει μια κέντα 5 φύλλων η οποία θα ξεκινάει από 3 και πάνω).
Σημείωση: Όσα φύλλα έχει η κέντα που ρίχνει ο πρώτος, τόσα πρέπει να έχει και η επόμενη. Ρίχνω κέντα 7 φύλλων; Ο επόμενος για να με χτυπήσει πρέπει να ρίξει κι εκείνος μια κέντα 7 φύλλων.</string>
    <string name="rules20">Σε όλες τις περιπτώσεις ό,τι παίζει ο πρώτος παίκτης, πρέπει να παίξουν κι οι υπόλοιποι. Παίζει μονοφυλλία στο τραπέζι; Όλοι παίζουμε μονοφυλλία. Δεν έχουμε φύλλο να ρίξουμε ή έχουμε φύλλο αλλά δεν θέλουμε να το ρίξουμε σε αυτό το γύρο; Πάμε ΠΑΣΟ…</string>
    <string name="rules21">ΕΙΔΙΚΑ ΦΥΛΛΑ</string>
    <string name="rules22">Mahjong</string>
    <string name="rules23">Ο παίκτης που έχει το Mahjong παίζει πρώτος. Το Mahjong παίζεται με 2 διαφορετικούς τρόπους:
-Σε άδειο τραπέζι, για ξεκίνημα μονοφυλλίας. Σαν αριθμός έχει την αξία (1). Ο παίκτης που ξεκινάει</string>
    <string name="rules24">μονοφυλλία με Mahjong έχει δικαίωμα να ζητήσει από τον επόμενο παίκτη να του ρίξει οποιοδήποτε φύλλο θέλει. Αν ο επόμενος το έχει, το ρίχνει υποχρεωτικά. Αν δεν το έχει, παίζει ό,τι θέλει.
-Σε κέντα που ξεκινάει από Mahjong (δηλαδή: Μ-2-3-4-5). Ο παίκτης που ρίχνει κέντα με Mahjong έχει το δικαίωμα να ζητήσει μια κέντα ίδιου πλήθους φύλλων η οποία θα περιλαμβάνει ένα φύλλο της επιλογής του (π.χ. “θέλω μια πεντάρα κέντα που να έχει μέσα Ρήγα [Κ]). Ο πρώτος παίκτης που έχει τέτοια κέντα είναι υποχρεωμένος να τη ρίξει στο τραπέζι.</string>
    <string name="rules25">Φοίνικας</string>
    <string name="rules26">Ο Φοίνικας παίζεται με 2 διαφορετικούς τρόπους:
-Μπαλαντέρ. Είτε σε ζευγάρι (π.χ. 7-Φ) είτε σε τριάδα (π.χ. Κ-Κ-Φ) είτε σε φουλ (9-9-Φ/3-3) είτε κέντα (6-7-8-9-Φ-J) είτε σε μονοφυλλία.</string>
    <string name="rules27">-Μονοφυλλία.Στη μονοφυλλία ο Φοίνικας έχει αξία +0.5 από το προηγούμενο φύλλο. Δηλαδή αν π.χ. έχω ρίξει 10 και πέσει Φοίνικας μετράει σαν 10.5
Αν ρίξω Άσσο και πέσει Φοίνικας, μετράει σαν Άσσος,5</string>
    <string name="rules28">Σκυλάκια</string>
    <string name="rules29">Τα Σκυλάκια παίζονται μόνο σε κενό τραπέζι και στερούν από τον επόμενο παίκτη τη σειρά του. Δηλαδή αν εγώ ρίξω Σκυλάκια, ο επόμενος παίκτης χάνει τη σειρά του και παίζει ο συμπαίκτης μου.</string>
    <string name="rules30">ΠΡΟΣΟΧΗ: Αν ο επόμενος παίχτης από εμένα δεν παίζει πια γιατί έχει ρίξει όλα του τα φύλλα, και ρίξω τα σκυλάκια, παίζει και πάλι ο συμπαίκτης μου. Αν εχω μείνει εγώ και ένας αντίπαλος, και ρίξω τα σκυλάκια τότε ανάλογα με τη θέση μου θα πάιξω ή εγώ ή ο αντίπαλος. Αν ο αντίπαλος είναι αριστερά μου, παίζω εγώ, ενώ αν είναι δεξιά μου παίζει αυτός. (Αυτό αλλάζει ανάλογα με τη φορά που παίζουμε.)</string>
    <string name="rules31">Δράκος</string>
    <string name="rules32">Ο Δράκος παίζεται μόνο σε μονοφυλλία και είναι η ισχυρότερη κάρτα (κερδίζει και τον Φοίνικα).</string>
    <string name="rules33">ΜΠΑΖΕΣ</string>
    <string name="rules34">Αυτό είναι το κομβικό σημείο του παιχνιδιού. Σκοπός του παιχνιδιού είναι να ξεφορτωθούμε πρώτοι το χέρι μας. Για να γίνει αυτό πρέπει να παίρνουμε μπάζες. Αυτό γίνεται όταν το φύλλο (ή ο συνδυασμός) του τελευταίου παίκτη, δεν έχει χτυπηθεί από κανέναν. Παράδειγμα: Αν έχει ξεκινήσει μια μονοφυλλία, ο παίκτης που θα ρίξει το μεγαλύτερο φύλλο παίρνει τη μπάζα, και παίζει εκείνος πρώτος.
Σημείωση: Όταν παίρνουμε μπάζα με Δράκο, δίνουμε τη μπάζα αυτή στον αντίπαλο που πιστεύουμε οτι θα βγει τελευταίος.</string>
    <string name="rules35">ΒΟΜΒΕΣ</string>
    <string name="rules36">Ως βόμβα εννοούμε το συνδυασμό εκείνο των φύλλων, ο οποίος πέφτει ανα πάσα στιγμή στο παιχνίδι, και παίρνει κατευθείαν τη μπάζα, εκτός κι αν χτυπηθεί από άλλη βόμβα. Υπάρχουν 2 βόμβες:
1) Το καρέ: Δηλαδή 4 ίδια φύλλα (4 Τριάρια, 4 Ρηγάδες κλπ…)
2) Κέντα χρώμα: Κέντα ίδιου χρώματος, η οποία έχει το λιγότερο 5 φύλλα.
Η βόμβα κέντα είναι δυνατότερη από τη βόμβα καρέ. Οπότε αν κάποιος ρίξει καρέ για να πάρει τη μπάζα, μπορεί να χτυπηθεί από κέντα χρώμα.</string>
    <string name="rules37">ΠΟΝΤΟΙ</string>
    <string name="rules38">Κάθε μοίρασμα τελειώνει μόλις βγει πρώτη μια ομάδα.
Για τον τελευταίο παίκτη ισχύουν τα παρακάτω:
-Δίνει τις μπάζες του στον παίκτη που βγήκε πρώτος
-Δίνει τα φύλλα του χεριού του στην αντίπαλη ομάδα.

Τα φύλλα που δίνουν πόντους είναι τα εξής:

Πεντάρια: Κάθε πεντάρι μετράει για 5 πόντους Δεκάρια: Κάθε δεκάρι μετράει για 10 πόντους
Ρηγάδες: Κάθε Ρήγας μετράει για 10 πόντους
Δράκος: Ο Δράκος μετράει για 25 πόντους
Φοίνικας: Ο Φοίνικας μετράει για -25 πόντους

Νικήτρια ανακηρύσσεται η ομάδα που φτάνει πρώτη τους 1000 πόντους</string>
	<string name="rules39">TICHU - GRAND TICHU - [1-2]</string>
	<string name="rules40">Last but not least, κάτι που κάνει τη διαφορά στο παιχνίδι…\n\nGrand Tichu\nΌταν μοιράζονται τα πρώτα 8 φύλλα, αν κάποιος παίκτης -έχοντας δει μόνο τα πρώτα 8 από τα 14 φύλλα του- πιστεύει πως εκείνος θα βγει πρώτος, δηλώνει “Grand Tichu”. Αν το επιτύχει, η ομάδα του επιβραβεύεται με +200 πόντους. Αν όμως αποτύχει, χάνει 200 πόντους…
\n\nTichu
\nΌταν μοιραστούν και τα 14 φύλλα, αν κάποιος παίκτης -έχοντας δει όλα τα φύλλα του- πιστεύει πως εκείνος θα βγει πρώτος, δηλώνει “Tichu”. Αν το επιτύχει, η ομάδα του επιβραβεύεται με +100 πόντους. Αν όμως αποτύχει, χάνει 100 πόντους.
\nΠροσοχή: Tichu λέμε την πρώτη φορά που ρίχνουμε φύλλο στο παιχνίδι. Δηλαδή για παράδειγμα, μπορώ για 3 γύρους να πηγαίνω πάσο, και την πρώτη φορά που θα παίξω να πω Tichu.
\n\n1-2
\nΑν μια ομάδα κάνει το 1-2 (κλείσουν και οι δύο ενώ δεν έχει κλείσει κανένας αντίπαλος), αυτομάτως τελειώνει η παρτίδα και γράφονται 200 πόντοι στη νικήτρια ομάδα.
\n\nTichu 1-2
\nΑν μια ομάδα κάνει Tichu 1-2, αυτομάτως τελειώνει η παρτίδα και γράφονται 300 πόντοι στη νικήτρια ομάδα.
\n\nGrand Tichu 1-2
\nΑν μια ομάδα κάνει Grand Tichu 1-2, αυτομάτως τελειώνει η παρτίδα και γράφονται 400 πόντοι στη νικήτρια ομάδα.
\n\nThanks to: http://enwravaremaras.blogspot.com</string>
</resources>