<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:scrollbars="vertical" 
    android:background="@color/background"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" 
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingTop="20dip"
    android:paddingBottom="20dip">
     <TableLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/background"
         android:gravity="center|center_vertical|fill"
         android:orientation="vertical">
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:textColor="@color/title"
                 android:layout_gravity="center"
                 android:textSize="22sp"
                 android:text="@string/rules"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip"  
                 android:text="@string/rules1"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
       			 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules2"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip"
                 android:text="@string/rules3"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip"
                 android:textStyle="bold"
                 android:text="@string/rules4"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip"
                 android:text="@string/rules5"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules6"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip"
                 android:text="@string/rules7"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules8"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules9"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules10"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules11"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules12"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules13"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules14"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules15"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules16"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules17"/>
         </TableRow>
         <TableRow
             android:layout_height="wrap_content">
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules18"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules19"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules20"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules21"/>
         </TableRow>
         <TableRow>
             <TableLayout 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" 
                 android:layout_weight="1">
                 <TableRow>
                     <TextView     
                         android:layout_height="wrap_content"   
                         android:layout_width="wrap_content" 
                         android:layout_weight="1"
                         android:layout_marginTop="20dip" 
                         android:textStyle="bold"
                         android:text="@string/rules22"/>
                 </TableRow>
                 <TableRow>
                     <TextView     
                         android:layout_height="wrap_content"   
                         android:layout_width="wrap_content" 
                         android:text="@string/rules23"/>
                 </TableRow>
             </TableLayout>
             <ImageView
                 android:contentDescription="@string/cdimage"
                 android:layout_marginTop="40dip" 
                 android:src="@drawable/mahjong"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content"
                 android:text="@string/rules24"/>
         </TableRow> 
         <TableRow>
             <TableLayout 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" 
                 android:layout_weight="1">
                 <TableRow>
                     <TextView     
                         android:layout_height="wrap_content"   
                         android:layout_width="wrap_content" 
                         android:layout_weight="1"
                         android:layout_marginTop="20dip" 
                         android:textStyle="bold"
                         android:text="@string/rules25"/>
                 </TableRow>
                 <TableRow>
                     <TextView     
                         android:layout_height="wrap_content"   
                         android:layout_width="wrap_content" 
                         android:text="@string/rules26"/>
                 </TableRow> 
             </TableLayout>
             <ImageView
                 android:contentDescription="@string/cdimage"
                 android:layout_marginTop="40dip" 
                 android:src="@drawable/phoenix"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules27"/>
         </TableRow> 
         <TableRow>
             <TableLayout 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" 
                 android:layout_weight="1">
                 <TableRow>
                     <TextView     
                         android:layout_height="wrap_content"   
                         android:layout_width="wrap_content" 
                         android:layout_weight="1"
                         android:layout_marginTop="20dip" 
                         android:textStyle="bold"
                         android:text="@string/rules28"/>
                 </TableRow>
                 <TableRow>
                     <TextView     
                         android:layout_height="wrap_content"   
                         android:layout_width="wrap_content" 
                         android:text="@string/rules29"/>
                 </TableRow> 
             </TableLayout>
             <ImageView
                 android:contentDescription="@string/cdimage"
                 android:layout_marginTop="40dip" 
                 android:src="@drawable/dog"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:text="@string/rules30"/>
         </TableRow> 
         <TableRow>
             <TableLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" 
                 android:layout_weight="1">
                 <TableRow>
                     <TextView     
                         android:layout_height="wrap_content"   
                         android:layout_width="wrap_content" 
                         android:layout_weight="1"
                         android:layout_marginTop="20dip" 
                         android:textStyle="bold"
                         android:text="@string/rules31"/>
                 </TableRow>
                 <TableRow>
                     <TextView     
                         android:layout_height="wrap_content"   
                         android:layout_width="wrap_content" 
                         android:text="@string/rules32"/>
                 </TableRow> 
             </TableLayout>
             <ImageView
                 android:contentDescription="@string/cdimage"
                 android:layout_marginTop="40dip" 
                 android:src="@drawable/dragon"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_weight="1"
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules33"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:text="@string/rules34"/>
         </TableRow>  
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_weight="1"
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules35"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:text="@string/rules36"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_weight="1"
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules37"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:text="@string/rules38"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_weight="1"
                 android:layout_marginTop="20dip" 
                 android:textStyle="bold"
                 android:text="@string/rules39"/>
         </TableRow>
         <TableRow>
             <TextView     
                 android:layout_height="wrap_content"   
                 android:layout_width="wrap_content" 
                 android:layout_marginTop="20dip" 
                 android:text="@string/rules40"/>
         </TableRow>
         <TableRow
             android:layout_marginTop="10dp"
             android:gravity="center">
         <com.google.ads.AdView 
             android:id="@+id/ad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             ads:adUnitId="a14faa65f0b9c9c"
             ads:loadAdOnCreate="true"
             ads:adSize="BANNER"
         />
         </TableRow>
    </TableLayout>
</ScrollView> 