<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     android:scrollbars="vertical" 
     android:background="@color/background"
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent">
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/background"
         android:gravity="center|center_vertical|fill"
         android:orientation="vertical" 
         android:paddingLeft="5dip"
         android:paddingRight="5dip"
         android:paddingTop="40dip">
         <TableRow
         	 android:gravity="center">
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/choose_old_game"
                 android:textColor="@color/title"
                 android:textSize="22sp"/>
         </TableRow>
         <TableRow
             android:gravity="center"
             android:layout_marginTop="20dip">
             <Spinner 
                 android:id="@+id/spinner3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:prompt="@string/choosegame_prompt"/>
         </TableRow>     
         <TableRow
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:paddingLeft="40dip"
             android:paddingRight="40dip">
             <Button
                 android:id="@+id/pending_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/continue_game"/>
         </TableRow>
         <TableRow
             android:layout_marginTop="10dp"
             android:gravity="center">
         <com.google.ads.AdView 
             android:id="@+id/ad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             ads:adUnitId="a14faa65f0b9c9c"
             ads:loadAdOnCreate="true"
             ads:adSize="BANNER"
         />
         </TableRow>
     </TableLayout>
</ScrollView>